[package]
name = "typikon"
version = "0.1.0"
edition = "2021"
license = "Apache2.0"
authors = ["Leon Ding <ding@ibyte.me>"]
description = "Typikon lets you use markdown to write your online books."


[dependencies]
pulldown-cmark = { version = "0.10.0", default-features = false, features = ["html"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.5.2"
serde_yaml = "0.8"
colored = "2.0"
chrono = "0.4"
tera = "1.11"

[package.metadata]
description = "Typikon lets you use markdown to write your online books."
repository = "https://github.com/auula/typikon"


